--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -58,14 +58,20 @@ Una de las principales desventajas de esta técnica es la alta probabilidad de c
 ##### Acceso Múltiple con Detección de Portadora (CSMA)
 ***CSMA (Carrier Sense Multiple Access)*** es una técnica de acceso múltiple en la cual cuando una estación desea transmitir una trama, primero escucha el medio para detectar si hay alguna transmisión en curso (detección de portadora). Si el medio está ocupado, la estación espera, pero si está libre, transmite la trama. Sin embargo, si dos o más estaciones intentan transmitir al mismo tiempo, puede ocurrir una colisión, debido a que la señal portadora no ha logrado propagarse lo suficientemente rápido. Para gestionar este riesgo, la estación espera una confirmación tras la transmisión. Si no recibe la confirmación luego de cierto tiempo se asume que hubo una colisión y se retransmite la trama.
 La principal desventaja de CSMA es que, a pesar de reducir la probabilidad de colisiones, todavía pueden ocurrir colisiones, especialmente si varias estaciones intentan transmitir simultáneamente. Variantes como CSMA p-persistente pueden manejar cuidadosamente el valor de $p$ para evitar inestabilidades bajo alta carga, donde las colisiones repetidas pueden llevar a una caída significativa del rendimiento.
-##### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
+##### Acceso Múltiple con Detección de Portadora y Detección de Colisiones (CSMA/CD)
 ***CSMA/CD (Carrier Sense Multiple Access with Collision Detection)*** es una versión mejorada de CSMA que permite a una estación transmitir solo si detecta que el medio está libre. Si el medio está ocupado, la estación espera. Si durante la transmisión se detecta una colisión, la estación envía una señal de interferencia para notificar a todas las estaciones de la colisión y detiene la transmisión. Luego, la estación espera un tiempo aleatorio antes de intentar retransmitir. Esta técnica reduce el tiempo desaprovechado al tiempo necesario para detectar una colisión, lo que mejora la eficiencia del uso del canal.
 La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido por colisiones, todavía puede experimentar inestabilidad en situaciones de alta carga, especialmente si se utilizan tramas cortas en comparación con el retardo de propagación. Para mitigar esto, se utiliza la técnica de ***espera exponencial binaria*** en redes como Ethernet, donde el tiempo de espera aumenta exponencialmente con cada intento fallido, ayudando a evitar que las colisiones repetidas lleven a la congestión de la red.
 
 >[!tldr] Espera o Retroceso Exponencial Binario
 >Cuando una estación en la red detecta una colisión, detiene inmediatamente la transmisión de datos y emite una señal de ***jamming*** para alertar a todas las demás estaciones sobre la colisión. Para evitar nuevas colisiones al retransmitir las tramas, se emplea la técnica de espera exponencial binaria.
 >Después de una colisión, la estación espera un tiempo antes de intentar retransmitir los datos. Este tiempo de espera es aleatorio y se determina a partir de la _**ventana de contención**_, que consiste en pequeños intervalos de tiempo (slots) definidos por la red. Con cada colisión adicional, el tamaño de la ventana de contención se incrementa, y la estación selecciona aleatoriamente el número de slots que deberá esperar antes de intentar transmitir de nuevo. La mayoría de protocolos que utilizan CSMA/CD soportan hasta 16 colisiones antes de desistir en enviar la trama a destino.
+##### Acceso Múltiple con Detección de Portadora y Prevención de Colisiones(CSMA/CA)
+***CSMA/CA (Carrier Sense Multiple Access with Collision Avoidance)*** es una alternativa a CSMA/CD en el cual antes de transmitir la información, el dispositivo escucha el canal para verificar si está libre. Si el canal está ocupado, el dispositivo espera un tiempo aleatorio antes de volver a verificar. Este tiempo de espera ayuda a evitar colisiones al reducir la probabilidad de que varios dispositivos intenten transmitir simultáneamente. Si el canal está libre, el dispositivo transmite los datos. Después de la transmisión, el dispositivo espera una confirmación (ACK) del receptor para asegurarse de que los datos se recibieron correctamente. Si no se recibe la confirmación, el dispositivo asume que hubo una colisión o error y reintenta la transmisión después de otro tiempo de espera aleatorio.
+A diferencia de CSMA/CD, que detecta colisiones, CSMA/CA intenta evitarlas desde el principio, lo cual es crucial en entornos inalámbricos donde las colisiones son más costosas debido a la naturaleza compartida del medio inalámbrico.
 
+>[!note] Uso de la Espera Exponencial Binaria en CSMA/CA
+>Cuando un dispositivo detecta que el canal está ocupado o no recibe una confirmación después de una transmisión, entra en un periodo de contención, donde espera una cantidad aleatoria de tiempo.
+>Cuando la transmisón resulte exitosa, la ventana de contención se restablece a su valor mínimo, permitiendo que el dispositivo vuelva a intentar transmitir rápidamente en el futuro.
 ## Ethernet
 Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son las basadas en Ethernet, desarrolladas por el comité de estándares IEEE 802.3. Como ya mencionamos anteriormente cada protocolo MAC implementa a su manera el control de acceso al medio, Ethernet concretamente utiliza la técnica conocida como ***CSMA/CD***.
 
@@ -79,7 +85,7 @@ El formato normal de una trama Ethernet está compuesta por los siguientes campo
 - **Delimitador del comienzo de la trama (SFD)**: Consiste en la secuencia de bits 10101011, que indica el comienzo real de la trama y posibilita que el receptor pueda localizar el primer bit del resto de la trama.
 - **Dirección de destino (DA)**: Especifica la estación o estaciones a las que va dirigida la trama. Puede tratarse de una única dirección física, una dirección de grupo o una dirección global.
 - **Dirección de origen (SA)**: Especifica la estación que envió la trama.
-- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en bytes, o el campo tipo de Ethernet. Este campo va variar dependiendo de si la trama se implemente siguiendo la norma IEEE 802.3 o una especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 bytes.
+- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en bytes, o el campo tipo de Ethernet. Este campo va a variar dependiendo de si la trama se implemente siguiendo la norma IEEE 802.3 o una especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 bytes.
 - **Datos LLC**: Unidad de datos proporcionada por el LLC.
 - **Relleno**: Consiste en octetos añadidos para asegurar que la trama sea lo suficientemente larga como para que la técnica de detección de colisiones funcione correctamente.
 - **Secuencia de Comprobación de Trama (FCS)**: Está constituido por una comprobación de redundancia cíclica de 32 bits, calculada teniendo en cuenta todos los campos excepto el preámbulo, el SFD y el FCS.
@@ -111,7 +117,7 @@ El funcionamiento básico de una red Token Ring se basa en el uso del token para
 Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
 El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
 ## Redes de Área Local Virtuales (VLAN)
-En la actualidad muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
+Muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
 - **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
 - **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
 - **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
@@ -133,11 +139,11 @@ Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar un
 >- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los paquetes IP.
 
 Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
-### Maneras de Configurar una VLAN
-Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración, aunque existen varias formas de asignar estaciones de trabajo a una VLAN:
-- **Por puertos o interfaz**: Cada puerto del switch se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
-- **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El switch mantiene una tabla, se especifica qué dirección MAC corresponde a cada VLAN.
-- **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El switch asigna a la VLAN correspondiente según el protocolo que reconoce.
+### Configuración de una VLAN
+Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración. Existen varias formas de asignar estaciones de trabajo a una VLAN:
+- **Por puertos o interfaz**: Cada puerto del conmutador se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
+- **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El conmutador mantiene una tabla donde se especifica qué dirección MAC corresponde a cada VLAN.
+- **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El conmutador asigna a la VLAN correspondiente según el protocolo que reconoce.
 - **Por dirección IP**: Se utiliza una tabla que asigna direcciones IP a VLAN específicas, de modo que los dispositivos que utilicen ciertas direcciones IP se integren a la VLAN correspondiente. Este método es el menos recomendado, ya que las direcciones IP de los equipos puede ser cambiada fácilmente.
 
-Por otro lado, en las VLAN dinámicas, el switch determina automáticamente a qué VLAN pertenece cada estación de trabajo basándose en su **dirección física (MAC)**, **dirección lógica (IP)** o **protocolo**. Esto significa que las estaciones pueden moverse dentro de la red, y el switch reasigna automáticamente la VLAN correcta según la configuración predefinida, brindando una mayor flexibilidad, ya que no requieren reconfiguraciones manuales cuando se cambian las estaciones de puerto o ubicación.
+Por otro lado, en las VLAN dinámicas, el conmutador determina automáticamente a qué VLAN pertenece cada estación de trabajo basándose en su **dirección física (MAC)**, **dirección lógica (IP)** o **protocolo**. Esto significa que las estaciones pueden moverse dentro de la red, y el conmutador reasigna automáticamente la VLAN correcta según la configuración predefinida, brindando una mayor flexibilidad, ya que no requieren reconfiguraciones manuales cuando se cambian las estaciones de puerto o ubicación.
