--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas.md
@@ -14,7 +14,7 @@ Actualmente, las redes LAN inalámbricas más populares son aquellas que utiliza
 El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Estas frecuencias son gestionadas por un regulador y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas.
 ### Arquitectura y Servicios IEEE 802.11
 En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas.
-El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones que ejecutan el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico. Las BSS pueden funcionar de forma aislada o estar conectados a un ***sistema troncal distribuido (DS)*** a través de un ***punto de acceso (AP)*** que funciona como puente entre los distintos BSS. El protocolo de control de acceso al medio puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
+El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones que ejecutan el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico. Las BSS pueden funcionar de forma aislada o estar conectados a un ***sistema troncal de distribución (DS)*** a través de un ***punto de acceso (AP)*** funcionando como puente entre los distintos BSS existentes. El protocolo de control de acceso al medio puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
 Un ***conjunto extendido de servicios (ESS)*** consiste en dos o más conjuntos básicos de servicios interconectados mediante un sistema de distribución. Este conjunto extendido de servicios aparece a nivel de control de enlace lógico como una única red LAN lógica.
 
 ![[conjunto-extendido-servicios.png]]
@@ -51,7 +51,7 @@ El estándar evaluó dos enfoques para los protocolos de control de acceso al me
 >Los protocolos de acceso distribuido son adecuados para redes ad-hoc y otras configuraciones de LAN inalámbricas con tráfico intermitente. Mientras que los protocolos de acceso centralizado son ideales para redes con estaciones interconectadas a través de una estación base que sirve de enlace con una LAN troncal y son beneficiosos para datos de alta prioridad o con requisitos de tiempo real.
 
 El resultado final definido en el estándar recibe el nombre de ***DFWMAC (Distributed Foundation Wireless MAC)***, que combina un control de acceso distribuido con un control centralizado opcional. La subcapa MAC emplea una ***función de coordinación distribuida (DCF)*** que utiliza un algoritmo de contención para gestionar el acceso general al medio. Para tráfico de alta prioridad y sin contención se utiliza una ***función de coordinación puntual (PCF)***, que se sitúa sobre DCF y aprovecha sus características para garantizar el acceso a sus usuarios.
-La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, este protocolo de acceso al medio intenta evitar las colisiones al máximo. No utiliza detección de colisiones porque en redes inalámbricas enviar datos por el medio es mucho mas costoso, además de ser difícil encontrar diferencias entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
+La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación. No utiliza detección de colisiones porque en redes inalámbricas enviar datos por el medio es mucho mas costoso, además de ser difícil encontrar diferencias entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
 1. **SIFS (Short IFS):** El más corto, usado para respuestas rápidas como confirmaciones y asegura la prioridad más alta en la transmisión.
 2. **PIFS (Point Coordination Function IFS):** De longitud media, usado por el controlador central en PCF para emitir sondeos y tiene prioridad sobre el tráfico normal.
 3. **DIFS (Distributed Coordination Function IFS):** El más largo, utilizado para tráfico ordinario y asincrónico.
