--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -17,7 +17,7 @@ En este contexto una ***señal analógica*** es aquella en la que la intensidad 
 >[!tldr] Señales Periódicas
 >Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
 >
->1. La **amplitud de pico** o simplemente amplitud, es el valor máximo que alcanza una señal respecto a su posición de equilibrio o cero a lo largo del tiempo. Normalmente, es un valor medido en voltios.
+>1. La **amplitud de pico** o simplemente amplitud, es el valor máximo que alcanza una señal respecto a su posición de equilibrio a lo largo del tiempo. Normalmente, es un valor medido en voltios.
 >2. La **frecuencia** es la cantidad de ciclos que una señal completa en un segundo. Se mide en ciclos por segundo o Hertz (Hz). Por ejemplo, si una señal tiene una frecuencia de 5 Hz, significa que realiza 5 ciclos completos por segundo.
 >3. La **fase** es la posición de un punto en el ciclo de una señal en un momento específico, generalmente medida en grados o radianes. La fase indica si una señal está adelantada o atrasada respecto a otra señal de referencia.
 >
