--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -12,8 +12,8 @@ Por encima de la capa física se encuentran las funciones asociadas a los servic
 4. Interfaz con las capas superiores, control de errores y de flujo.
 
 Estas funciones se asocian generalmente a la capa del enlace de datos, la cual de acuerdo al estándar se divide en dos sub capas. La capa de ***control de enlace lógico (LLC)*** que se encarga de brindar los servicios descritos en el último ítem, y la capa de ***control de acceso al medio (MAC)*** que se encarga de ofrecer el resto de prestaciones. Esta separación de funciones se debe a las siguientes razones:
-1. La lógica necesaria para la gestión del acceso a un medio compartido no se encuentra en esta capa de control de enlace de datos tradicional.
-2. Cada red LAN ofrece una forma distinta de trama MAC para el mismo LLC.
+1. La lógica necesaria para la gestión del acceso a un medio compartido no se encuentra tradicionalmente en la capa de enlace de datos.
+2. Cada tipo de red LAN ofrece un formato de trama MAC distinta para el mismo LLC.
 
 Los datos del nivel superior se pasan hacia abajo hasta llegar al nivel LLC, que añade una cabecera de información de control, posteriormente se lo pasa a la capa MAC que termina de añadir sus encabezados quedando lista la trama para ser transmitida.
 
@@ -21,7 +21,7 @@ Los datos del nivel superior se pasan hacia abajo hasta llegar al nivel LLC, que
 
 ### Capa de Control de Enlace Lógico (LLC)
 La capa de *control de enlace lógico* es similar en varios aspectos a otras capas de enlace de uso común, es decir, se encarga de la transmisión de tramas entre dos estaciones adyacentes. La principal diferencia es que esta capa presenta dos características no compartidas por la mayor parte de otros protocolos de control de enlace:
-1. Debe admitir accesos múltiples, consecuencia de la naturaleza de medio compartido del enlace.
+1. Debe admitir accesos múltiples, consecuencia de la naturaleza compartida del medio de transmisión.
 2. La capa de control de acceso al medio lo descarga de algunos detalles de acceso al enlace físico.
 
 El direccionamiento en este caso implica la especificación de un origen y destino. Las direcciones que se utilizan en la capa de control de enlace lógico, se denominan ***puntos de acceso al servicio (SAP)***.
