--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -21,7 +21,7 @@ Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar
 
 Muchos protocolos de capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado por Ethernet y las redes IEEE 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
 ## Servicios Brindados por la Capa de Enlace de Datos
-Los servicios proporcionados por la capa de enlacec de datos son esenciales para asegurar la transferencia fiable y eficiente de datos entre nodos en una red local. Esta capa se encarga de la detección y corrección de errores, el control de flujo, y de la gestión de acceso al medio compartido, aunque de este tema hablaremos más adelante cuando veamos el estándar IEEE 802.
+Los servicios proporcionados por la capa de enlace de datos son esenciales para asegurar la transferencia fiable y eficiente de datos entre nodos en una red local. Esta capa se encarga de la detección y corrección de errores, el control de flujo, y de la gestión de acceso al medio compartido, aunque de este tema hablaremos más adelante cuando veamos el estándar IEEE 802.
 ### Servicios de Transmisión
 La capa de enlace de datos puede diseñarse para ofrecer varios servicios. Los servicios reales ofrecidos varían de un protocolo a otro, pero existen tres posibilidades razonables que normalmente se proporcionan las cuales son:
 
@@ -62,7 +62,7 @@ Estos mecanismos se denominan genéricamente ***solicitud de repetición automá
 
 Existe una relación entre los distintos métodos ARQ y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada, puesto que se necesita mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
 #### Técnicas para la Detección de Errores
-Las técnicas de detección de errores permiten al receptor detectar los errores que se han producido en los bits de las tramas. Aunque se utilicen bits de detección de errores, puede que sigan existiendo errores que no detectados. Por tanto, lo que intentaremos será elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Cuanto más sofisticadas son las técnicas de detección de errores mayores son los recursos adicionales necesarios.
+Las técnicas de detección de errores permiten al receptor detectar los errores que se han producido en los bits de las tramas. Aunque se utilicen bits de detección de errores, puede que sigan existiendo errores que no han sido detectados. Por tanto, intentaremos elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Cuanto más sofisticadas son las técnicas de detección de errores mayores son los recursos adicionales necesarios.
 ##### Comprobación de Paridad
 Utiliza un **bit de paridad** para detectar errores en el flujo de bits de las tramas. Este bit de paridad no es más que un bit adicional que el emisor pone al final de la carga útil de la trama. Dependiendo del tipo de paridad elegida la cantidad de unos de la carga útil más este bit será par o impar.
 Un problema con este esquema es que un solo bit de paridad puede detectar de manera confiable un único error de un solo bit en el bloque. Si el bloque está muy confuso debido a una ráfaga de errores larga, la probabilidad de detectar ese error es solo del 50%, lo cual no es aceptable.
